# maknoon-ledger-sol-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: build-aar.sh  settings.gradle.kts
ios/: build-xcframework.sh
ledger-sol-core/: Cargo.toml
ledger-sol-core/src/: client.rs  error.rs  lib.rs  message.rs  transport.rs  types.rs
ledger-sol-core/test-vectors/: solana-message-signing-kat.json
ledger-sol-core/tests/: kat_gen.rs
