[workspace]
resolver = "2"
members = ["ledger-sol-core"]

[workspace.package]
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
repository = "https://github.com/elabify/maknoon-ledger-sol-rs"
authors = ["Benjamin Chodroff"]

[workspace.dependencies]
uniffi = { version = "0.31", default-features = false }
async-trait = "0.1"
thiserror = "1"
hex = "0.4"
tokio = { version = "1", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["std"] }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

[profile.release]
strip = false
lto = "thin"
opt-level = 3
codegen-units = 1
