[package]
name = "ledger-sol-core"
version = "0.1.0"
description = "Ledger Solana app signing client with UniFFI bindings for Swift and Kotlin"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "ledger_sol_core"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
hex.workspace = true
bs58.workspace = true
ed25519-dalek.workspace = true

uniffi = { workspace = true, features = ["tokio", "cli"] }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "test-util"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
